test/functions/vass/proc-iter/error-yield-in-proc-2.good
error-yield-in-proc-2.chpl:2: In function 'prc':
error-yield-in-proc-2.chpl:3: error: 'yield' is not allowed outside of an iterator
error-yield-in-proc-2.chpl:2: note: cannot 'yield' out of a procedure
